--- a/_posts/2016-1-30-17.md
+++ b/_posts/2016-1-30-17.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 17
+title: 17 (Part 1)
 ---
 
 I first met Jannick at a bar in a dirty town. I actually didn’t really meet him. He saw me and looked deep into my eyes, standing on the other side of that bar, raised his skinny hand and opened his fist as if to say „hey, you!“. I awkwardly did the same with a weird feeling in my stomach. Looking at him, a feeling of awe struck me. The way he stood there, like a god, and even though he was a stranger, I knew he KNOWS. The moment passed faster than I could think about it. Me and a few friends ran outside afterwards, lay drunk on the street and spray-painted „HATE“ on walls. At the time everyone saw the crazy me, but I started to like and embrace it. Because the people I wanna know, the interesting ones, are the ones who love your craziness, the people who adore it. Jannick was that kind of a person.
 
-The real story actually starts at another party in the same town. The place was full of squares and I got too drunk to care. I had brought some tea to smoke, but didn’t want to do it because of past events in which I drank and smoked and got too fucked up, so I gave it to Jannick and he smoked it with the small gang he came to the party with. One girl of the group was the driver for the night, so she couldn’t smoke or drink and instead just watched them. I was sitting at the bar, getting more drunk, when a girl came to me and yelled „hell, that was some good tea, thank you so much“. I didn’t know who she was, so she introduced herself as Vanessa and said she’s friends with Jannick. I liked her, she was pretty and I didn’t know at the time that I’d see her a lot in the future. She introduced me to her best friend, the driver girl, her name was Viola. I talked to her about some lame stuff, nothing special. The same lame party shit that always happens, yet somehow a feeling struck me that this night was something special, something more valuable than other nights.
+The real story actually starts at another party in the same town. The place was full of squares and I got too drunk to care. I had brought some tea to smoke, but didn’t want to do it because of past events in which I drank and smoked and got too fucked up, so I gave it to Jannick and he smoked it with the small gang he came to the party with. One girl of the group was the driver for the night, so she couldn’t smoke or drink and instead just watched them. I was sitting at the bar, getting more drunk, when a girl came to me and yelled „hell, that was some good tea, thank you so much“. I didn’t know who she was, so she introduced herself as Vanessa and said she’s friends with Jannick. I liked her, she was pretty and I didn’t know at the time that I’d see her a lot in the future. She introduced me to her best friend, the driver girl, her name was Viola. I talked to her about some lame stuff, nothing special. The same lame shit that always happens, yet somehow a feeling struck me that this night was something special, something more valuable than other nights.
 We all (except the driver girl) got even more drunk together and got the attention of all the people around us. We were round pebbles, surrounded by squares. We messed the place up, got rolls of toilet paper and wrapped Jannick with them in the middle of the room as everybody looked at us and we didn’t care.
 
 Three month later I looked at my phone and there was a missed Facebook-call from that girl Viola, with whom I had only talked once after we met the first time. I texted her, asking why she called me and she answered that it was accidentally. Later I found out that she thought she could get my phone number by calling me via Facebook, it didn’t work, of course it didn’t.
